--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -481,14 +481,33 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkScrolledWindow" id="sidebar-scroll">
+                  <object class="GtkNotebook" id="sidebar_notebook">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">never</property>
-                    <property name="vscrollbar_policy">automatic</property>
-                    <property name="shadow_type">in</property>
+                    <property name="group_id">1</property>
+                    <property name="show_tabs">False</property>
+                    <property name="tab_pos">bottom</property>
                     <child>
-                      <placeholder/>
+                      <object class="GtkScrolledWindow" id="sidebar-scroll">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="hscrollbar_policy">never</property>
+                        <property name="vscrollbar_policy">automatic</property>
+                        <property name="shadow_type">in</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="tab">
+                      <object class="GtkLabel" id="tags_tree_label">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Tags</property>
+                      </object>
+                      <packing>
+                        <property name="tab_fill">False</property>
+                      </packing>
+
                     </child>
                   </object>
                   <packing>
@@ -550,13 +569,31 @@
                     <property name="can_focus">True</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkScrolledWindow" id="main_pane">
+                      <object class="GtkNotebook" id="main_notebook">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">automatic</property>
-                        <property name="vscrollbar_policy">automatic</property>
+                        <property name="group_id">2</property>
+                        <property name="show_tabs">False</property>
+                        <property name="tab_pos">bottom</property>
                         <child>
-                          <placeholder/>
+                          <object class="GtkScrolledWindow" id="main_pane">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">automatic</property>
+                            <property name="vscrollbar_policy">automatic</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                          </object>
+                        </child>
+                        <child type="tab">
+                          <object class="GtkLabel" id="tasks_tab_label">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">Tasks</property>
+                          </object>
+                          <packing>
+                            <property name="tab_fill">False</property>
+                          </packing>
                         </child>
                       </object>
                       <packing>
@@ -565,11 +602,12 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkScrolledWindow" id="closed_pane">
-                        <property name="height_request">100</property>
+                      <object class="GtkNotebook" id="accessory_notebook">
+                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">automatic</property>
-                        <property name="vscrollbar_policy">automatic</property>
+                        <property name="group_id">2</property>
+                        <property name="show_tabs">False</property>
+                        <property name="tab_pos">bottom</property>
                         <child>
                           <placeholder/>
                         </child>
