--- a/GTG/taskbrowser/taskbrowser.glade
+++ b/GTG/taskbrowser/taskbrowser.glade
@@ -603,7 +603,7 @@
                     </child>
                     <child>
                       <object class="GtkNotebook" id="accessory_notebook">
-                        <property name="visible">True</property>
+                        <property name="visible">False</property>
                         <property name="can_focus">True</property>
                         <property name="group_id">2</property>
                         <property name="show_tabs">False</property>
