--- a/GTG/gtk/preferences.glade
+++ b/GTG/gtk/preferences.glade
@@ -267,8 +267,8 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="headers_visible">False</property>
+                                <property name="rules_hint">True</property>
                                 <property name="show_expanders">False</property>
-                                <property name="enable_grid_lines">vertical</property>
                                 <signal name="cursor_changed" handler="on_PluginTree_cursor_changed"/>
                               </object>
                             </child>
