--- a/GTG/gtk/browser/taskbrowser.glade
+++ b/GTG/gtk/browser/taskbrowser.glade
@@ -154,6 +154,17 @@
                         <signal name="activate" handler="on_preferences_activate"/>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkImageMenuItem" id="backends_mi">
+                        <property name="label">_Backends</property>
+                        <property name="visible">True</property>
+                        <property name="use_underline">True</property>
+                        <property name="image">image4</property>
+                        <property name="use_stock">False</property>
+                        <property name="accel_group">accelgroup1</property>
+                        <signal name="activate" handler="on_edit_backends_activate"/>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
