--- a/GTG/gtk/browser/taskbrowser.glade
+++ b/GTG/gtk/browser/taskbrowser.glade
@@ -11,7 +11,6 @@
     <child>
       <object class="GtkVBox" id="master_vbox">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <child>
           <object class="GtkMenuBar" id="browser_menu">
             <property name="visible">True</property>
@@ -260,6 +259,7 @@
                         <property name="label">gtk-help</property>
                         <property name="visible">True</property>
                         <property name="tooltip_text" translatable="yes">Open GTG documentation in your web browser</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">accelgroup1</property>
                         <signal name="activate" handler="on_documentation_clicked"/>
@@ -286,146 +286,156 @@
           </packing>
         </child>
         <child>
-          <object class="GtkToolbar" id="task_toolbar">
+          <object class="GtkVBox" id="vbox_toolbars">
             <property name="visible">True</property>
             <child>
-              <object class="GtkToolButton" id="new_task_b">
+              <object class="GtkToolbar" id="task_toolbar">
                 <property name="visible">True</property>
-                <property name="is_important">True</property>
-                <property name="label" translatable="yes">New Task</property>
-                <property name="icon_name">gtg-task-new</property>
-                <signal name="clicked" handler="on_add_task"/>
+                <child>
+                  <object class="GtkToolButton" id="new_task_b">
+                    <property name="visible">True</property>
+                    <property name="is_important">True</property>
+                    <property name="label" translatable="yes">New Task</property>
+                    <property name="icon_name">gtg-task-new</property>
+                    <signal name="clicked" handler="on_add_task"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="new_subtask_b">
+                    <property name="label" translatable="yes">New Subtask</property>
+                    <property name="icon_name">gtg-task-new</property>
+                    <signal name="clicked" handler="on_add_subtask"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="edit_b">
+                    <property name="visible">True</property>
+                    <property name="visible_horizontal">False</property>
+                    <property name="visible_vertical">False</property>
+                    <property name="label" translatable="yes">Edit</property>
+                    <property name="stock_id">gtk-edit</property>
+                    <signal name="clicked" handler="on_edit_active_task"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparatorToolItem" id="&lt;separateur&gt;"/>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="Undo">
+                    <property name="label" translatable="yes">Undo</property>
+                    <property name="stock_id">gtk-undo</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="Redo">
+                    <property name="label" translatable="yes">Redo</property>
+                    <property name="stock_id">gtk-redo</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparatorToolItem" id="separator_6">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="done_b">
+                    <property name="visible">True</property>
+                    <property name="sensitive">False</property>
+                    <property name="is_important">True</property>
+                    <property name="label" translatable="yes">Mark as Done</property>
+                    <property name="icon_name">gtg-task-done</property>
+                    <signal name="clicked" handler="on_mark_as_done"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="dismiss_b">
+                    <property name="visible">True</property>
+                    <property name="sensitive">False</property>
+                    <property name="label" translatable="yes">Dismiss</property>
+                    <property name="icon_name">gtg-task-dismiss</property>
+                    <signal name="clicked" handler="on_dismiss_task"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToolButton" id="delete_b">
+                    <property name="sensitive">False</property>
+                    <property name="label" translatable="yes">Delete</property>
+                    <property name="icon_name">edit-delete</property>
+                    <signal name="clicked" handler="on_delete_task"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSeparatorToolItem" id="separator_7">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkToggleToolButton" id="workview_toggle">
+                    <property name="visible">True</property>
+                    <property name="is_important">True</property>
+                    <property name="label" translatable="yes">Work View</property>
+                    <property name="stock_id">gtk-index</property>
+                    <signal name="toggled" handler="on_workview_toggled"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="new_subtask_b">
-                <property name="label" translatable="yes">New Subtask</property>
-                <property name="icon_name">gtg-task-new</property>
-                <signal name="clicked" handler="on_add_subtask"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="edit_b">
-                <property name="visible">True</property>
-                <property name="visible_horizontal">False</property>
-                <property name="visible_vertical">False</property>
-                <property name="label" translatable="yes">Edit</property>
-                <property name="stock_id">gtk-edit</property>
-                <signal name="clicked" handler="on_edit_active_task"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSeparatorToolItem" id="&lt;separateur&gt;"/>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="Undo">
-                <property name="label" translatable="yes">Undo</property>
-                <property name="stock_id">gtk-undo</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="Redo">
-                <property name="label" translatable="yes">Redo</property>
-                <property name="stock_id">gtk-redo</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSeparatorToolItem" id="separator_6">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="done_b">
-                <property name="visible">True</property>
-                <property name="sensitive">False</property>
-                <property name="is_important">True</property>
-                <property name="label" translatable="yes">Mark as Done</property>
-                <property name="icon_name">gtg-task-done</property>
-                <signal name="clicked" handler="on_mark_as_done"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="dismiss_b">
-                <property name="visible">True</property>
-                <property name="sensitive">False</property>
-                <property name="label" translatable="yes">Dismiss</property>
-                <property name="icon_name">gtg-task-dismiss</property>
-                <signal name="clicked" handler="on_dismiss_task"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="delete_b">
-                <property name="sensitive">False</property>
-                <property name="label" translatable="yes">Delete</property>
-                <property name="icon_name">edit-delete</property>
-                <signal name="clicked" handler="on_delete_task"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSeparatorToolItem" id="separator_7">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToggleToolButton" id="workview_toggle">
-                <property name="visible">True</property>
-                <property name="is_important">True</property>
-                <property name="label" translatable="yes">Work View</property>
-                <property name="stock_id">gtk-index</property>
-                <signal name="toggled" handler="on_workview_toggled"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
+                <property name="position">0</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -436,7 +446,6 @@
             <child>
               <object class="GtkVBox" id="sidebar_vbox">
                 <property name="width_request">75</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkHBox" id="hbox4">
                     <property name="visible">True</property>
@@ -491,9 +500,9 @@
                   <object class="GtkNotebook" id="sidebar_notebook">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="group_id">1</property>
-                    <property name="show_tabs">False</property>
                     <property name="tab_pos">bottom</property>
+                    <property name="show_tabs">False</property>
+                    <property name="group_id">1</property>
                     <child>
                       <object class="GtkScrolledWindow" id="sidebar-scroll">
                         <property name="visible">True</property>
@@ -514,7 +523,6 @@
                       <packing>
                         <property name="tab_fill">False</property>
                       </packing>
-
                     </child>
                   </object>
                   <packing>
@@ -530,7 +538,6 @@
             <child>
               <object class="GtkVBox" id="main_vbox">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkHBox" id="quickadd_pane">
                     <property name="visible">True</property>
@@ -574,14 +581,13 @@
                   <object class="GtkVPaned" id="vpaned1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="orientation">vertical</property>
                     <child>
                       <object class="GtkNotebook" id="main_notebook">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="group_id">2</property>
-                        <property name="show_tabs">False</property>
                         <property name="tab_pos">bottom</property>
+                        <property name="show_tabs">False</property>
+                        <property name="group_id">2</property>
                         <child>
                           <object class="GtkScrolledWindow" id="main_pane">
                             <property name="visible">True</property>
@@ -610,11 +616,10 @@
                     </child>
                     <child>
                       <object class="GtkNotebook" id="accessory_notebook">
-                        <property name="visible">False</property>
                         <property name="can_focus">True</property>
-                        <property name="group_id">2</property>
-                        <property name="show_tabs">False</property>
                         <property name="tab_pos">bottom</property>
+                        <property name="show_tabs">False</property>
+                        <property name="group_id">2</property>
                         <child>
                           <placeholder/>
                         </child>
@@ -702,7 +707,6 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="about_dialog_vbox">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkHButtonBox" id="dialog-action_area2">
@@ -966,7 +970,6 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="addtag_dialog_vbox">
         <property name="visible">True</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="addtag_label">
@@ -1068,5 +1071,9 @@ commas.</property>
     <property name="visible">True</property>
     <property name="pixel_size">16</property>
     <property name="icon_name">gtg-tag</property>
+  </object>
+  <object class="GtkImage" id="image4">
+    <property name="visible">True</property>
+    <property name="stock">gtk-home</property>
   </object>
 </interface>
