--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -40,13 +40,14 @@
                           <object class="GtkVBox" id="vbox1342342243">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkRadioButton" id="export_finished_last_week_rb">
-                                <property name="label" translatable="yes">Tasks finished last week</property>
+                              <object class="GtkRadioButton" id="export_all_active_rb">
+                                <property name="label" translatable="yes">Active tasks shown in the browser</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
+                                <property name="group">export_finished_last_week_rb</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -68,13 +69,13 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkRadioButton" id="export_all_active_rb">
-                                <property name="label" translatable="yes">Active tasks shown in the browser</property>
+                              <object class="GtkRadioButton" id="export_finished_last_week_rb">
+                                <property name="label" translatable="yes">Tasks finished last week</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
+                                <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">export_finished_last_week_rb</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
